<resources>
    <string name="app_name">COMP2000 App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Leslie Warren</string>
    <string name="nav_header_subtitle">Full-Stack Developer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_login">Login</string>
    <string name="menu_gallery">My Profile</string>
    <string name="menu_slideshow">My Holidays</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="textview">TextView</string>
    <string name="create_holiday_req_string">Create a New Holiday Request</string>
    <string name="name_leslie_warren">Leslie Warren</string>
    <string name="string_full_stack_developer">Full-Stack Developer</string>
    <string name="remaining_days_entitlement">You have 18 Remaining Days of Holiday Entitlement</string>
    <string name="welcome_to_inhand">Welcome to InHand</string>
</resources>