<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.comp2000app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.comp2000app.ui.profile.ProfileFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.comp2000app.ui.holidays.HolidaysFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_holidays" >

        <action
            android:id="@+id/action_holidaysFragment_to_requestHolidayFragment"
            app:destination="@id/request_holiday" />

    </fragment>

    <fragment
        android:id="@+id/request_holiday"
        android:name="com.example.comp2000app.ui.holidays.request.RequestHolidayFragment"
        android:label="Request Holiday"
        tools:layout="@layout/fragment_request_holiday"
        />
</navigation>